--- a/example.env
+++ b/example.env
@@ -9,7 +9,7 @@ API_HASH = ''
 CHAT_ID = 
 
 #API Telegram (BotFather)
-API_TOKEN = '5296385105:AAFsPzdEMUuHHDvvJDFdoxdtVj9xSUWVXVU'#release
+API_TOKEN = 
 
 #Default path to chromedriver file
 DRIVER = '/usr/local/bin/chromedriver' 
