Change method localisation, optimize code

--- a/example.env
+++ b/example.env
@@ -15,3 +15,11 @@ API_TOKEN =
 DRIVER = '/usr/local/bin/chromedriver' 
 
 CHANNEL = 'sirena_dp'
+
+TREVOGA = "Оголошено тривогу"
+
+OTBOY = "ВІДБІЙ ТРИВОГИ"
+
+URL_TREVOG='https://alerts.in.ua/?lite'
+
+GMT=+3
