Some feature and some bags fixed

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,6 @@ TREVOGA = "Оголошено тривогу"
 
 OTBOY = "ВІДБІЙ ТРИВОГИ"
 
-URL_TREVOG='https://alerts.in.ua/?lite'
+URL_TREVOG='https://alerts.in.ua/'
 
 GMT=+3
