--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#Block the user (the user will not obey the rules) / ID user
+#Block the user (the user will not obey the rules) / ID user | Admin-user
 NOBOT = 
 
 #API Telegram (my.telegram.org)
@@ -11,7 +11,7 @@ CHAT_ID =
 #API Telegram (BotFather)
 API_TOKEN = 
 
-#Default path to chromedriver file
+#Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
 
 CHANNEL = 'sirena_dp'
@@ -21,5 +21,7 @@ TREVOGA = "Оголошено тривогу"
 OTBOY = "ВІДБІЙ ТРИВОГИ"
 
 URL_TREVOG='https://alerts.in.ua/'
+
+RANDOM = 100
 
 GMT=+3
