--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-#Block the user (the user will not obey the rules) / ID user | Admin-user
+#Admin-user (id_user)
 NOBOT = 
+
+#API Telegram (BotFather)
+API_TOKEN = 
 
 #API Telegram (my.telegram.org)
 API_ID =  
@@ -7,9 +10,6 @@ API_HASH = ''
 
 #Chat to send trevoga
 CHAT_ID = 
-
-#API Telegram (BotFather)
-API_TOKEN = 
 
 #Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
