--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-#Admin-user (id_user)
-NOBOT = 
-
 #API Telegram (BotFather)
 API_TOKEN = 
 
@@ -16,11 +13,11 @@ DRIVER = '/usr/local/bin/chromedriver'
 
 CHANNEL = 'sirena_dp'
 
-TREVOGA = "Оголошено тривогу"
+SIREN = "Оголошено тривогу"
 
-OTBOY = "ВІДБІЙ ТРИВОГИ"
+END = "ВІДБІЙ ТРИВОГИ"
 
-URL_TREVOG='https://alerts.in.ua/'
+URL='https://alerts.in.ua/'
 
 RANDOM = 100
 
