--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,11 @@ CHAT_ID =
 #Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
 
-CHANNEL = 'sirena_dp'
+CHANNEL = 'air_alert_ua'
 
-SIREN = "Оголошено тривогу"
+SIREN = "Повітряна тривога"
 
-END = "ВІДБІЙ ТРИВОГИ"
+END = "Відбій тривоги"
 
 URL='https://alerts.in.ua/'
 
