--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,14 @@ DRIVER = '/usr/local/bin/chromedriver'
 
 CHANNEL = 'air_alert_ua'
 
-SIREN = "Повітряна тривога"
+SIREN = "Повітряна тривога в Дніпропетровська область"
 
-END = "Відбій тривоги"
+END = "Відбій тривоги в Дніпропетровська область"
 
 URL='https://alerts.in.ua/'
 
 RANDOM = 100
 
 GMT=+3
+
+LEVELLOGGINING = "INFO"
