--- a/.env.example
+++ b/.env.example
@@ -23,4 +23,8 @@ RANDOM = 100
 
 GMT=+3
 
-LEVELLOGGINING = "INFO"
+LEVELLOGGINING = "WARNING"
+
+#use main tiktok api(sometimes tiktok changes its policy and does not allow you to get the url directly from the page, but the alternative method always works, although not always quickly)
+#'True' - use main api, 'False' - use only alternative
+TIKTOKUSE = "False"
