--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ API_HASH = ''
 #Chat to send trevoga
 CHAT_ID = 
 
+#instagram
+INSTA_LOGIN=""
+INSTA_PASS=""
+
 #Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
 
@@ -28,3 +32,4 @@ LEVELLOGGINING = "WARNING"
 #use main tiktok api(sometimes tiktok changes its policy and does not allow you to get the url directly from the page, but the alternative method always works, although not always quickly)
 #'True' - use main api, 'False' - use only alternative
 TIKTOKUSE = "False"
+
