--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ LEVELLOGGINING = "WARNING"
 #'True' - use main api, 'False' - use only alternative
 TIKTOKUSE = "False"
 
+#use main insta api
+#'True' - use main api, 'False' - use only alternative
+INSTAUSE = "False"
