--- a/.env.example
+++ b/.env.example
@@ -8,18 +8,14 @@ API_HASH = ''
 #Chat to send trevoga
 CHAT_ID = 
 
-#instagram
-INSTA_LOGIN=""
-INSTA_PASS=""
-
 #Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
 
 CHANNEL = 'air_alert_ua'
 
-SIREN = "Повітряна тривога в Дніпропетровська область"
+SIREN = "Повітряна тривога"
 
-END = "Відбій тривоги в Дніпропетровська область"
+END = "Відбій тривоги"
 
 URL='https://alerts.in.ua/'
 
@@ -28,7 +24,3 @@ RANDOM = 100
 GMT=+3
 
 LEVELLOGGINING = "WARNING"
-
-#use main insta api
-#'True' - use main api, 'False' - use only alternative
-INSTAUSE = "False"
