--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,13 @@
 #API Telegram (BotFather)
-API_TOKEN = 
+API_TOKEN = ""
 
-#API Telegram (my.telegram.org)
-API_ID =  
-API_HASH = ''
-
-#Chat to send trevoga
-CHAT_ID = 
+#API key from devs.alerts.in.ua
+API_TOKEN_ALERT = ""
 
 #Default path to chromedriver file (Docker-file)
 DRIVER = '/usr/local/bin/chromedriver' 
 
-CHANNEL = 'air_alert_ua'
-
-SIREN = "Повітряна тривога"
-
-END = "Відбій тривоги"
-
 URL='https://alerts.in.ua/'
-
-RANDOM = 100
 
 GMT=+3
 
