--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 aiogram==2.25.1
-Telethon==1.24.0
 selenium==4.1.3
 emoji==1.7.0
 python-dotenv==0.20.0
@@ -9,7 +8,7 @@ SpeechRecognition==3.8.1
 psycopg2-binary==2.9.3
 yt-dlp==2023.3.4
 instagrapi==1.16.30
-Pillow==9.2.0
 pyppeteer==1.0.2
 instaloader==4.9.6
 httpx==0.24.1
+alerts-in-ua==0.2.5
