--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ URL='https://alerts.in.ua/'
 GMT=+3
 
 LEVELLOGGINING = "WARNING"
+
+#Use custom Telegram API server: for default "" – use telegram server
+SERVER_ADDRESS = ""
