--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ API_TOKEN = ""
 API_TOKEN_ALERT = ""
 
 #Default path to chromedriver file (Docker-file)
-DRIVER = '/usr/local/bin/chromedriver' 
+DRIVER = '/usr/bin/chromium' 
+
+#CHAT ID
+CHAT_ID = 0
 
 URL='https://alerts.in.ua/'
 
